--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,21 +1,37 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>FTT - User</title>
-<style>
-	body {font-family:Verdana;}
-</style>
-</head>
-<body>
-<h1>User</h1>
-<!--  get, post ok -->
-<form method="post" action="/FTT-WEB-091/user">
-<p><label for="user-id">ID: </label><input type="number" id="user-id" name="user-id" required></p>
-<p><label for="user-name">Name: </label><input type="text" id="user-name" name="user-name" required></p>
-<p><label for="user-email">E-Mail: </label><input type="email" id="user-email" name="user-email" required></p>
-<p><label for="user-color">Color: </label><input type="color" id="user-color" name="user-color" required></p>
-<input type="submit">
-</form>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>FTT - User</title>
+	<link rel="stylesheet" href="css/style.css">
+  </head>
+
+  <body>
+    <nav class="navbar">
+      <a href="index.html">Home</a>
+      <a href="game.html">Games</a>
+      <a href="movie.html">Filmes</a>
+    </nav>
+    <h1>User</h1>
+    <!--  get, post ok -->
+    <form method="post" action="/FTT-WEB-091/user">
+      <p>
+        <label for="user-id">ID: </label
+        ><input type="number" id="user-id" name="user-id" required />
+      </p>
+      <p>
+        <label for="user-name">Name: </label
+        ><input type="text" id="user-name" name="user-name" required />
+      </p>
+      <p>
+        <label for="user-email">E-Mail: </label
+        ><input type="email" id="user-email" name="user-email" required />
+      </p>
+      <p>
+        <label for="user-color">Color: </label
+        ><input type="color" id="user-color" name="user-color" required />
+      </p>
+      <input type="submit" />
+    </form>
+  </body>
 </html>
