Alteração do visual

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,34 +4,17 @@
     <meta charset="UTF-8" />
     <title>FTT - User</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
 
   <body>
     <nav class="navbar">
       <a href="index.html">Home</a>
       <a href="game.html">Games</a>
-      <a href="movie.html">Filmes</a>
+	  <a href="movie.html">Filmes</a>
     </nav>
-    <h1>User</h1>
-    <!--  get, post ok -->
-    <form method="post" action="/FTT-WEB-091/user">
-      <p>
-        <label for="user-id">ID: </label
-        ><input type="number" id="user-id" name="user-id" required />
-      </p>
-      <p>
-        <label for="user-name">Name: </label
-        ><input type="text" id="user-name" name="user-name" required />
-      </p>
-      <p>
-        <label for="user-email">E-Mail: </label
-        ><input type="email" id="user-email" name="user-email" required />
-      </p>
-      <p>
-        <label for="user-color">Color: </label
-        ><input type="color" id="user-color" name="user-color" required />
-      </p>
-      <input type="submit" />
-    </form>
+    
   </body>
 </html>
