--- a/src/main/webapp/game.html
+++ b/src/main/webapp/game.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="@css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Games</title>
   </head>
 
@@ -17,7 +20,7 @@
       </nav>
     </header>
     <h1>Jogos</h1>
-    <!--  get, post ok -->
+
     <form method="post" action="/FTT-WEB-091/game">
       <p>
         <label for="game-name">Nome: </label
@@ -33,7 +36,12 @@
       </p>
       <p>
         <label for="game-releaseDate">Data de Lançamento: </label
-        ><input type="date" id="game-releaseDate" name="game-releaseDate" required />
+        ><input
+          type="date"
+          id="game-releaseDate"
+          name="game-releaseDate"
+          required
+        />
       </p>
       <input type="submit" />
     </form>
