--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,18 +3,53 @@
   <head>
     <meta charset="UTF-8" />
     <title>FTT - User</title>
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css" />
+	<script src="js/script.js"  type="text/javascript"></script> 
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	
   </head>
 
   <body>
     <nav class="navbar">
       <a href="index.html">Home</a>
       <a href="game.html">Games</a>
-	  <a href="movie.html">Filmes</a>
+      <a href="movie.html">Filmes</a>
     </nav>
-    
+    <table class="table table-striped">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Nome</th>
+          <th scope="col">Produtora</th>
+          <th scope="col">Genero</th>
+		  <th scope="col">Data de Lançamento</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Mark</td>
+          <td>Otto</td>
+          <td>@mdo</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>Jacob</td>
+          <td>Thornton</td>
+          <td>@fat</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>Larry</td>
+          <td>the Bird</td>
+          <td>@twitter</td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
