--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8" />
     <title>FTT - User</title>
     <link rel="stylesheet" href="css/style.css" />
-	<script src="js/script.js"  type="text/javascript"></script> 
+    <script src="js/script.js" type="text/javascript"></script>
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-	
   </head>
 
   <body>
     <nav class="navbar">
       <a href="index.html">Home</a>
       <a href="game.html">Games</a>
-	  <a href="movie.html">Filmes</a>
+      <a href="movie.html">Filmes</a>
     </nav>
+    <h1>Jogos</h1>
     <table class="table table-striped">
       <thead class="thead-dark">
         <tr>
@@ -27,28 +27,26 @@
           <th scope="col">Nome</th>
           <th scope="col">Produtora</th>
           <th scope="col">Genero</th>
-		  <th scope="col">Data de Lançamento</th>
+          <th scope="col">Data de Lançamento</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody class="table-game">
+       
+      </tbody>
+    </table>
+    <h1>Filmes</h1>
+    <table class="table table-striped">
+      <thead class="thead-dark">
         <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
+          <th scope="col">#</th>
+          <th scope="col">Nome</th>
+          <th scope="col">Produtora</th>
+          <th scope="col">Genero</th>
+          <th scope="col">Data de Lançamento</th>
         </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td>Larry</td>
-          <td>the Bird</td>
-          <td>@twitter</td>
-        </tr>
+      </thead>
+      <tbody class="table-movie">
+       
       </tbody>
     </table>
   </body>
