--- a/src/main/webapp/game.html
+++ b/src/main/webapp/game.html
@@ -5,44 +5,88 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <title>Games</title>
   </head>
 
   <body>
     <header>
-      <nav class="navbar">
-        <a href="index.html">Home</a>
-        <a href="game.html">Games</a>
-        <a href="movie.html">Filmes</a>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">Home</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="game.html">Games</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="movie.html">Filmes</a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
     <h1>Jogos</h1>
 
     <form method="post" action="/FTT-WEB-091/game">
-      <p>
-        <label for="game-name">Nome: </label
-        ><input type="text" id="game-name" name="game-name" required />
-      </p>
-      <p>
-        <label for="game-producer">Produtora: </label
-        ><input type="text" id="game-producer" name="game-producer" required />
-      </p>
-      <p>
-        <label for="game-genre">Gênero: </label
-        ><input type="text" id="game-genre" name="game-genre" required />
-      </p>
-      <p>
-        <label for="game-releaseDate">Data de Lançamento: </label
-        ><input
+      <div class="form-group">
+        <label for="game-name">Nome: </label>
+        <input
+          type="text"
+          class="form-control"
+          id="game-name"
+          name="game-name"
+          required
+        />
+      </div>
+      <div class="form-group">
+        <label for="game-producer">Produtora: </label>
+        <input
+          type="text"
+          class="form-control"
+          id="game-producer"
+          name="game-producer"
+          required
+        />
+      </div>
+      <div class="form-group">
+        <label for="game-genre">Gênero: </label>
+        <input
+          type="text"
+          class="form-control"
+          id="game-genre"
+          name="game-genre"
+          required
+        />
+      </div>
+      <div class="form-group">
+        <label for="game-releaseDate">Data de Lançamento: </label>
+        <input
           type="date"
           id="game-releaseDate"
           name="game-releaseDate"
+          class="form-control"
           required
         />
-      </p>
+      </div>
+
       <input type="submit" />
     </form>
   </body>
