--- a/src/main/webapp/game.html
+++ b/src/main/webapp/game.html
@@ -43,51 +43,55 @@
         </div>
       </nav>
     </header>
-    <h1>Jogos</h1>
+    <div class="container">
+      <div class="col-sm">
+        <h1>Jogos</h1>
 
-    <form method="post" action="/FTT-WEB-091/game">
-      <div class="form-group">
-        <label for="game-name">Nome: </label>
-        <input
-          type="text"
-          class="form-control"
-          id="game-name"
-          name="game-name"
-          required
-        />
-      </div>
-      <div class="form-group">
-        <label for="game-producer">Produtora: </label>
-        <input
-          type="text"
-          class="form-control"
-          id="game-producer"
-          name="game-producer"
-          required
-        />
-      </div>
-      <div class="form-group">
-        <label for="game-genre">Gênero: </label>
-        <input
-          type="text"
-          class="form-control"
-          id="game-genre"
-          name="game-genre"
-          required
-        />
-      </div>
-      <div class="form-group">
-        <label for="game-releaseDate">Data de Lançamento: </label>
-        <input
-          type="date"
-          id="game-releaseDate"
-          name="game-releaseDate"
-          class="form-control"
-          required
-        />
-      </div>
+        <form method="post" action="/FTT-WEB-091/game">
+          <div class="form-group">
+            <label for="game-name">Nome: </label>
+            <input
+              type="text"
+              class="form-control"
+              id="game-name"
+              name="game-name"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="game-producer">Produtora: </label>
+            <input
+              type="text"
+              class="form-control"
+              id="game-producer"
+              name="game-producer"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="game-genre">Gênero: </label>
+            <input
+              type="text"
+              class="form-control"
+              id="game-genre"
+              name="game-genre"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="game-releaseDate">Data de Lançamento: </label>
+            <input
+              type="date"
+              id="game-releaseDate"
+              name="game-releaseDate"
+              class="form-control"
+              required
+            />
+          </div>
 
-      <input type="submit" />
-    </form>
+          <button type="submit" class="btn btn-primary">Salvar</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
