--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>FTT - User</title>
     <link rel="stylesheet" href="css/style.css" />
-    <script src="js/script.js" type="text/javascript"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <link
@@ -42,31 +42,39 @@
         </div>
       </nav>
     </header>
-    <h1>Jogos</h1>
-    <table class="table table-striped">
-      <thead class="thead-dark">
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Nome</th>
-          <th scope="col">Produtora</th>
-          <th scope="col">Genero</th>
-          <th scope="col">Data de Lançamento</th>
-        </tr>
-      </thead>
-      <tbody class="table-game"></tbody>
-    </table>
-    <h1>Filmes</h1>
-    <table class="table table-striped">
-      <thead class="thead-dark">
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Nome</th>
-          <th scope="col">Produtora</th>
-          <th scope="col">Genero</th>
-          <th scope="col">Data de Lançamento</th>
-        </tr>
-      </thead>
-      <tbody class="table-movie"></tbody>
-    </table>
+    <div class="container">
+      <div class="row">
+        <h1>Jogos</h1>
+        <table class="table table-striped">
+          <thead class="thead-dark">
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Nome</th>
+              <th scope="col">Produtora</th>
+              <th scope="col">Genero</th>
+              <th scope="col">Data de Lançamento</th>
+              <th scope="col">Ação</th>
+            </tr>
+          </thead>
+          <tbody class="table-game"></tbody>
+        </table>
+        <h1>Filmes</h1>
+        <table class="table table-striped">
+          <thead class="thead-dark">
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Nome</th>
+              <th scope="col">Produtora</th>
+              <th scope="col">Genero</th>
+              <th scope="col">Data de Lançamento</th>
+              <th scope="coFl">Ação</th>
+            </tr>
+          </thead>
+          <tbody class="table-movie"></tbody>
+        </table>
+      </div>
+    </div>
+
+    <script src="js/script.js" type="text/javascript"></script>
   </body>
 </html>
