--- a/src/main/webapp/movie.html
+++ b/src/main/webapp/movie.html
@@ -42,50 +42,54 @@
         </div>
       </nav>
     </header>
-    <h1>Filmes</h1>
+    <div class="container">
+      <div class="col-sm">
+        <h1>Filmes</h1>
 
-    <form method="post" action="/FTT-WEB-091/movie">
-      <div class="form-group">
-        <label for="movie-name">Nome: </label>
-        <input
-          type="text"
-          class="form-control"
-          id="movie-name"
-          name="movie-name"
-          required
-        />
+        <form method="post" action="/FTT-WEB-091/movie">
+          <div class="form-group">
+            <label for="movie-name">Nome: </label>
+            <input
+              type="text"
+              class="form-control"
+              id="movie-name"
+              name="movie-name"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="movie-producer">Produtora: </label>
+            <input
+              type="text"
+              class="form-control"
+              id="movie-producer"
+              name="movie-producer"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="movie-genre">Gênero: </label>
+            <input
+              type="text"
+              class="form-control"
+              id="movie-genre"
+              name="movie-genre"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="movie-releaseDate">Data de Lançamento: </label>
+            <input
+              type="date"
+              id="movie-releaseDate"
+              name="movie-releaseDate"
+              class="form-control"
+              required
+            />
+          </div>
+          <button type="submit" class="btn btn-primary">Salvar</button>
+        </form>
       </div>
-      <div class="form-group">
-        <label for="movie-producer">Produtora: </label>
-        <input
-          type="text"
-          class="form-control"
-          id="movie-producer"
-          name="movie-producer"
-          required
-        />
-      </div>
-      <div class="form-group">
-        <label for="movie-genre">Gênero: </label>
-        <input
-          type="text"
-          class="form-control"
-          id="movie-genre"
-          name="movie-genre"
-          required
-        />
-      </div>
-      <div class="form-group">
-        <label for="movie-releaseDate">Data de Lançamento: </label>
-        <input
-          type="date"
-          id="movie-releaseDate"
-          name="movie-releaseDate"
-          class="form-control"
-          required
-        />
-      </div>
-      <input type="submit" />
-    </form>
+    </div>
   </body>
 </html>
