--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="Cp1252" />
     <title>FTT - User</title>
     <link rel="stylesheet" href="css/style.css" />
 
@@ -52,8 +52,8 @@
               <th scope="col">Nome</th>
               <th scope="col">Produtora</th>
               <th scope="col">Genero</th>
-              <th scope="col">Data de LanÃ§amento</th>
-              <th scope="col">AÃ§Ã£o</th>
+              <th scope="col">Data de Lançamento</th>
+              <th scope="col">Ação</th>
             </tr>
           </thead>
           <tbody class="table-game"></tbody>
@@ -66,8 +66,8 @@
               <th scope="col">Nome</th>
               <th scope="col">Produtora</th>
               <th scope="col">Genero</th>
-              <th scope="col">Data de LanÃ§amento</th>
-              <th scope="coFl">AÃ§Ã£o</th>
+              <th scope="col">Data de Lançamento</th>
+              <th scope="coFl">Ação</th>
             </tr>
           </thead>
           <tbody class="table-movie"></tbody>
