--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -38,6 +38,9 @@
             <li class="nav-item">
               <a class="nav-link" href="movie.html">Filmes</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="grafico.html">Graficos</a>
+            </li>
           </ul>
         </div>
       </nav>
