--- a/src/main/webapp/movie.html
+++ b/src/main/webapp/movie.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -37,6 +37,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="movie.html">Filmes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="grafico.html">Graficos</a>
             </li>
           </ul>
         </div>
@@ -83,6 +86,16 @@
               type="date"
               id="movie-releaseDate"
               name="movie-releaseDate"
+              class="form-control"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="movie-duration">Duração (em minutos): </label>
+            <input
+              type="number"
+              id="movie-duration"
+              name="movie-duration"
               class="form-control"
               required
             />
