--- a/src/main/webapp/update-movie.html
+++ b/src/main/webapp/update-movie.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -37,6 +37,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="movie.html">Filmes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="grafico.html">Graficos</a>
             </li>
           </ul>
         </div>
@@ -96,6 +99,17 @@
             required
           />
         </div>
+        
+        <div class="form-group">
+            <label for="movie-duration">Duração (em minutos): </label>
+            <input
+              type="number"
+              id="movie-duration"
+              name="movie-duration"
+              class="form-control"
+              required
+            />
+          </div>
         <button class="btn btn-primary">Salvar</button>
       </div>
     </div>
