--- a/src/main/webapp/game.html
+++ b/src/main/webapp/game.html
@@ -34,10 +34,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="game.html">Games</a>
+              <a class="nav-link" href="list-games.html">Games</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="movie.html">Filmes</a>
+              <a class="nav-link" href="list-movies.html">Filmes</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="grafico.html">Graficos</a>
@@ -50,7 +50,7 @@
       <div class="col-sm">
         <h1>Jogos</h1>
 
-        <form method="post" action="/FTT-WEB-091/game">
+        <form method="post" action="/FTT-WEB-091/game" accept-charset="utf-8">
           <div class="form-group">
             <label for="game-name">Nome: </label>
             <input
