--- a/src/main/webapp/movie.html
+++ b/src/main/webapp/movie.html
@@ -33,10 +33,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="game.html">Games</a>
+              <a class="nav-link" href="list-games.html">Games</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="movie.html">Filmes</a>
+              <a class="nav-link" href="list-movies.html">Filmes</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="grafico.html">Graficos</a>
