--- a/src/main/webapp/trailer.html
+++ b/src/main/webapp/trailer.html
@@ -17,7 +17,7 @@
   </head>
   
   <body>
-    <header>
+   <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="index.html">Home</a>
         <button
@@ -34,20 +34,22 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="game.html">Games</a>
+              <a class="nav-link" href="list-games.html">Games</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="movie.html">Filmes</a>
+              <a class="nav-link" href="list-movies.html">Filmes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="grafico.html">Graficos</a>
             </li>
           </ul>
         </div>
       </nav>
     </header>
         <div class="container">
-            <div id='div2' class="embed-responsive embed-responsive-16by9">
+            <div id='div2' class="embed-responsive embed-responsive-16by9 border border-info">
             
             </div>
         </div>
-    
   </body>
   <script src="js/trailer.js" type="text/javascript"></script>
